04-applications/sample-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    name: sample-app
    istio-injection: enabled
  annotations:
    description: "Sample Web Application namespace"
    contact: "admin@sampleapp.com"
